--- a/KitchenSink/app/src/main/res/layout/main.xml
+++ b/KitchenSink/app/src/main/res/layout/main.xml
@@ -13,6 +13,11 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         >
+        <Button
+            android:id="@+id/percentLayoutButton"
+            android:text="PercentLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
