--- a/KitchenSink/app/src/main/res/layout/activity_percent_layout.xml
+++ b/KitchenSink/app/src/main/res/layout/activity_percent_layout.xml
@@ -44,10 +44,22 @@
         android:text="@string/hello_world"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:x="0.625"
-        app:y="0.625"
+        app:x="0.125"
+        app:y="0.125"
         app:wide="0.25"
         app:high="0.25"
+        android:layout_gravity="bottom|right"
+        android:background="#ff0"/>
+
+    <Button
+        android:text="@string/hello_world"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:x="0.5"
+        app:y="0.5"
+        app:wide="0.25"
+        app:high="0.25"
+        android:layout_gravity="center"
         android:background="#ff0"/>
 
 </flipagram.android.widget.PercentLayout>
