--- a/KitchenSink/app/src/main/res/layout/main.xml
+++ b/KitchenSink/app/src/main/res/layout/main.xml
@@ -18,6 +18,13 @@
             android:text="PercentLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/ratioLayoutButton"
+            android:text="RatioLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/percentLayoutButton"
+            />
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
