--- a/widgets/src/main/res/layout/view_prevnext.xml
+++ b/widgets/src/main/res/layout/view_prevnext.xml
@@ -1,28 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
-    <ImageButton android:id="@+id/prevButton"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
-        android:scaleType="centerInside"
-        android:background="#0000"
-        android:layout_alignParentLeft="true"
-        />
+    <RelativeLayout
+        android:id="@+id/prevTarget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/nOfM"
+        android:padding="8dp"
+        >
+        <ImageButton android:id="@+id/prevButton"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:scaleType="centerInside"
+            android:background="#0000"
+            android:layout_centerHorizontal="true"
+            />
+    </RelativeLayout>
     <TextView android:id="@+id/nOfM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         tools:text="N of M"
         />
-    <ImageButton android:id="@+id/nextButton"
-        android:layout_width="14dp"
-        android:layout_height="14dp"
-        android:scaleType="centerInside"
-        android:background="#0000"
-        android:layout_alignParentRight="true"
-        />
+    <RelativeLayout
+        android:id="@+id/nextTarget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/nOfM"
+        android:padding="8dp"
+        >
+        <ImageButton android:id="@+id/nextButton"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:scaleType="centerInside"
+            android:background="#0000"
+            android:layout_centerHorizontal="true"
+            />
+    </RelativeLayout>
 </RelativeLayout>
