--- a/widgets/src/main/res/layout/view_prevnext.xml
+++ b/widgets/src/main/res/layout/view_prevnext.xml
@@ -4,40 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
-    <RelativeLayout
-        android:id="@+id/prevTarget"
+    <ImageButton
+        android:id="@+id/prevButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/nOfM"
-        android:padding="14dp"
-        >
-        <ImageButton android:id="@+id/prevButton"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:scaleType="centerInside"
-            android:background="#0000"
-            android:layout_centerHorizontal="true"
-            />
-    </RelativeLayout>
+        android:scaleType="centerInside"
+        />
     <TextView android:id="@+id/nOfM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         tools:text="N of M"
         />
-    <RelativeLayout
-        android:id="@+id/nextTarget"
+    <ImageButton
+        android:id="@+id/nextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/nOfM"
-        android:padding="14dp"
-        >
-        <ImageButton android:id="@+id/nextButton"
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:scaleType="centerInside"
-            android:background="#0000"
-            android:layout_centerHorizontal="true"
-            />
-    </RelativeLayout>
+        android:scaleType="centerInside"
+        />
 </RelativeLayout>
