--- a/widgets/src/main/res/values/attrs_oval_text_view.xml
+++ b/widgets/src/main/res/values/attrs_oval_text_view.xml
@@ -1,7 +1,7 @@
 <resources>
     <declare-styleable name="CircleTextView">
-        <attr name="borderColor" format="color" />
-        <attr name="borderSize" format="dimension" />
-        <attr name="fillColor" format="color" />
+        <attr name="circleBorderColor" format="color" />
+        <attr name="circleBorderSize" format="dimension" />
+        <attr name="circleFillColor" format="color" />
     </declare-styleable>
 </resources>
