--- a/KitchenSink/app/src/main/res/layout/main.xml
+++ b/KitchenSink/app/src/main/res/layout/main.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -80,29 +81,29 @@
                 app:circleFillColor="@android:color/holo_red_dark"
                 />
 
-            <flipagram.android.widget.TriangleView
-                android:id="@+id/triangleView"
-                android:layout_width="20dp"
-                android:layout_height="10dp"
-                android:layout_below="@id/circleTextView"
-                android:layout_centerHorizontal="true"
-                android:padding="10dp"
-                android:text="@string/hello_world"
-                app:triangleFillColor="@android:color/holo_blue_bright"
-                app:triangleDirection="north"
-                />
+            <!--<flipagram.android.widget.TriangleView-->
+                <!--android:id="@+id/triangleView"-->
+                <!--android:layout_width="20dp"-->
+                <!--android:layout_height="10dp"-->
+                <!--android:layout_below="@id/circleTextView"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:padding="10dp"-->
+                <!--android:text="@string/hello_world"-->
+                <!--app:triangleFillColor="@android:color/holo_blue_bright"-->
+                <!--app:triangleDirection="north"-->
+                <!--/>-->
 
-            <flipagram.android.widget.CoachTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/triangleView"
-                android:layout_centerHorizontal="true"
-                android:translationX="-20dp"
-                android:padding="10dp"
-                android:text="@string/hello_world"
-                app:coachFillColor="@android:color/holo_blue_bright"
-                app:coachRadius="5dp"
-                />
+            <!--<flipagram.android.widget.CoachTextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@id/triangleView"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:translationX="-20dp"-->
+                <!--android:padding="10dp"-->
+                <!--android:text="@string/hello_world"-->
+                <!--app:coachFillColor="@android:color/holo_blue_bright"-->
+                <!--app:coachRadius="5dp"-->
+                <!--/>-->
 
         </flipagram.android.widget.PadToSquareRelativeLayout>
     </RelativeLayout>
