--- a/KitchenSink/app/src/main/res/layout/main.xml
+++ b/KitchenSink/app/src/main/res/layout/main.xml
@@ -33,6 +33,13 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/percentLayoutButton"
             />
+        <Button
+            android:id="@+id/restoreCoachmarks"
+            android:text="Restore Coachmarks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"/>
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
